[package]
name = "lvfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#vfs-macro = {path = "../vfs-macro"}

bitflags = "1.3.2"
log = "0.4.14"
#pconst = {git = ""}

[dev-dependencies]
env_logger = "0.9.0"

[features]
default = ["ramfs"]
ramfs = []