[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devfs = { path = "../devfs" }
ramfs = { path = "../ramfs" }
dynfs = { path = "../dynfs" }
vfscore = { path = "../vfscore" ,features = ["linux_error"] }
lwext4-vfs = { path = "../lwext4-vfs" }
lwext4-rs = { git = "https://github.com/os-module/lwext4" }
pconst = { git = "https://github.com/os-module/pconst.git" }
log = "0.4.14"
spin = "0"
env_logger = "0.9"