[package]
name = "fat-vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fatfs = { git = "https://github.com/os-module/rust-fatfs.git",default-features = false,features = ["alloc","lfn"] }
lock_api = {version = "0",default-features = false}
vfscore = {path = "../vfscore"}
unifs = {path = "../unifs"}
log = "0.4.14"


[dev-dependencies]
spin = "0"
env_logger = "0.9"