[package]
name = "unifs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lock_api = {version = "0",default-features = false}
pconst = { git = "https://github.com/os-module/pconst.git"}
vfscore = {path = "../vfscore"}
log = "0.4.14"