[package]
name = "vfscore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
log = "0.4.14"
downcast-rs = { version = "1.2.0", default-features = false }
#pconst = { path = "../../pconst",optional = true}
pconst = { git = "https://github.com/os-module/pconst.git",features = ["trick"],optional = true }

[features]
linux_error = ["dep:pconst"]

[dev-dependencies]
ramfs = { path = "../ramfs" }
spin = "0"